<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="hint_UserName">User Name</string>
    <string name="hint_Name">Nama</string>
    <string name="hint_Email">Email</string>
    <string name="hint_Password">Password</string>
    <string name="hint_RePassword">RePassword</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="btnAdd">Add</string>
    <string name="txtCategory">Category</string>
    <string name="txtAmount">Amount</string>
    <string name="txtCategoryName">Category Name</string>
    <string name="txtExpense">Expense</string>
    <string name="txtIncome">Income</string>
    <string name="txtOverView">OverView</string>
    <string name="txtLogOut">Logout</string>
    <string name="lblDate">Date</string>
    <string name="T_user_not_valid"> User Not Valid</string>
    <string name="T_Register_Failed"> Failed to Register</string>
</resources>
