<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.handi.expensetracker.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:alpha="0.5"
        android:background="@color/colorPrimary"
        android:onClick="btnExpenseClick">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txtExpense"
            android:textSize="@dimen/size_Title"
            android:textStyle="bold" />
    </FrameLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_Space" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:alpha="0.5"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="btnIncomeClick"
            android:text="@string/txtIncome"
            android:textSize="@dimen/size_Title"
            android:textStyle="bold" />
    </FrameLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_Space" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:alpha="0.5"
        android:background="@color/colorPrimary"
        android:onClick="btnOverViewClick">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txtOverView"
            android:textSize="@dimen/size_Title"
            android:textStyle="bold" />
    </FrameLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_Space" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:alpha="0.5"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="btnLogOutClick"
            android:text="@string/txtLogOut"
            android:textSize="@dimen/size_Title"
            android:textStyle="bold" />
    </FrameLayout>

</LinearLayout>
